[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Character Select.gd" type="Script" id=1]
[ext_resource path="res://animations/mich/stand2.png" type="Texture" id=2]
[ext_resource path="res://animations/jada/stand2.png" type="Texture" id=3]
[ext_resource path="res://animations/kadeem/stand1.png" type="Texture" id=4]
[ext_resource path="res://sprites/coin.png" type="Texture" id=5]
[ext_resource path="res://sprites/shopTent.png" type="Texture" id=6]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/stand1.png-b7de63efd1f78cab6b3876832e6e7526.stex"

[node name="Character Select" type="VBoxContainer"]
margin_right = 900.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_right = 900.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Choose your fighters!"

[node name="outer" type="HBoxContainer" parent="."]
margin_top = 4.0
margin_right = 900.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="players" type="VBoxContainer" parent="outer"]
margin_right = 900.0
margin_bottom = 596.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="outer/players"]
editor/display_folded = true
margin_right = 900.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="mich" type="CenterContainer" parent="outer/players/HBoxContainer"]
editor/display_folded = true
margin_right = 222.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="outer/players/HBoxContainer/mich"]
margin_left = 79.0
margin_top = 116.0
margin_right = 143.0
margin_bottom = 180.0
texture = ExtResource( 2 )

[node name="jada" type="CenterContainer" parent="outer/players/HBoxContainer"]
editor/display_folded = true
margin_left = 226.0
margin_right = 448.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect2" type="TextureRect" parent="outer/players/HBoxContainer/jada"]
margin_left = 79.0
margin_top = 116.0
margin_right = 143.0
margin_bottom = 180.0
texture = ExtResource( 3 )

[node name="sam" type="CenterContainer" parent="outer/players/HBoxContainer"]
editor/display_folded = true
margin_left = 452.0
margin_right = 674.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect3" type="TextureRect" parent="outer/players/HBoxContainer/sam"]
margin_left = 79.0
margin_top = 116.0
margin_right = 143.0
margin_bottom = 180.0
texture = SubResource( 1 )

[node name="kadeem" type="CenterContainer" parent="outer/players/HBoxContainer"]
margin_left = 678.0
margin_right = 900.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect4" type="TextureRect" parent="outer/players/HBoxContainer/kadeem"]
margin_left = 79.0
margin_top = 116.0
margin_right = 143.0
margin_bottom = 180.0
texture = ExtResource( 4 )

[node name="HBoxContainer2" type="HBoxContainer" parent="outer/players"]
editor/display_folded = true
margin_top = 300.0
margin_right = 900.0
margin_bottom = 596.0
size_flags_vertical = 3

[node name="razna" type="CenterContainer" parent="outer/players/HBoxContainer2"]
editor/display_folded = true
margin_right = 222.0
margin_bottom = 296.0
size_flags_horizontal = 3

[node name="TextureRect5" type="TextureRect" parent="outer/players/HBoxContainer2/razna"]
margin_left = 111.0
margin_top = 148.0
margin_right = 111.0
margin_bottom = 148.0

[node name="kristian" type="CenterContainer" parent="outer/players/HBoxContainer2"]
editor/display_folded = true
margin_left = 226.0
margin_right = 448.0
margin_bottom = 296.0
size_flags_horizontal = 3

[node name="TextureRect6" type="TextureRect" parent="outer/players/HBoxContainer2/kristian"]
margin_left = 111.0
margin_top = 148.0
margin_right = 111.0
margin_bottom = 148.0

[node name="boaz" type="CenterContainer" parent="outer/players/HBoxContainer2"]
editor/display_folded = true
margin_left = 452.0
margin_right = 674.0
margin_bottom = 296.0
size_flags_horizontal = 3

[node name="TextureRect7" type="TextureRect" parent="outer/players/HBoxContainer2/boaz"]
margin_left = 111.0
margin_top = 148.0
margin_right = 111.0
margin_bottom = 148.0

[node name="sylvia" type="CenterContainer" parent="outer/players/HBoxContainer2"]
editor/display_folded = true
margin_left = 678.0
margin_right = 900.0
margin_bottom = 296.0
size_flags_horizontal = 3

[node name="TextureRect8" type="TextureRect" parent="outer/players/HBoxContainer2/sylvia"]
margin_left = 111.0
margin_top = 148.0
margin_right = 111.0
margin_bottom = 148.0

[node name="subway stations" type="VBoxContainer" parent="outer"]
margin_left = 900.0
margin_right = 1024.0
margin_bottom = 596.0
size_flags_horizontal = 3

[node name="stop1" type="TextureRect" parent="outer/subway stations"]
editor/display_folded = true
margin_right = 124.0
margin_bottom = 296.0
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="outer/subway stations/stop1"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 2

[node name="stop2" type="TextureRect" parent="outer/subway stations"]
editor/display_folded = true
margin_top = 300.0
margin_right = 124.0
margin_bottom = 596.0
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="outer/subway stations/stop2"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )
stretch_mode = 1
[connection signal="gui_input" from="outer/players/HBoxContainer/mich" to="." method="_on_mich_gui_input"]
[connection signal="gui_input" from="outer/players/HBoxContainer/jada" to="." method="_on_jada_gui_input"]
[connection signal="gui_input" from="outer/players/HBoxContainer/sam" to="." method="_on_sam_gui_input"]
[connection signal="gui_input" from="outer/players/HBoxContainer/kadeem" to="." method="_on_kadeem_gui_input"]
[connection signal="gui_input" from="outer/players/HBoxContainer2/razna" to="." method="_on_razna_gui_input"]
[connection signal="gui_input" from="outer/players/HBoxContainer2/kristian" to="." method="_on_kristian_gui_input"]
[connection signal="gui_input" from="outer/players/HBoxContainer2/boaz" to="." method="_on_boaz_gui_input"]
[connection signal="gui_input" from="outer/players/HBoxContainer2/sylvia" to="." method="_on_sylvia_gui_input"]
[connection signal="gui_input" from="outer/subway stations/stop1" to="." method="_on_stop1_gui_input"]
[connection signal="gui_input" from="outer/subway stations/stop2" to="." method="_on_stop2_gui_input"]
